<resources>
    <string name="app_name">Dice Roll Probability Calculator</string>
    <string name="simsLabel">Simulation\nMode</string>
    <string name="numRollsLabel">Number of Rolls Left: </string>
    <string name="calcButton">Calculate</string>
    <string name="simsDefault">100000</string>
    <string name="rollsDefault">3</string>
    <string name="result">The probability is: </string>
    <string name="setRoll">Set the current dice roll?</string>
    <string name="desDiceRollLabel">Desired Dice Roll</string>
    <string name="setDiceLabel">Current Dice Roll</string>
    <string name="optionsButton">Options</string>
    <string name="simsHint"><![CDATA[Positive Number > 10000]]></string>
    <string name="numDiceLabel">Number of Dice:</string>
    <string name="numFacesLabel">Number of Faces on Die:</string>
    <string name="sumLabel">Sum Calculator</string>
    <string name="desDiceModeLabel">Desired Dice Mode</string>
    <string name="desSumLabel">Desired Sum</string>
    <string name="sumDefault">20</string>
    <string name="choice">Desired Roll Calculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open_drawer">Open Navigation</string>
    <string name="nav_close_drawer">Close Navigation</string>
    <string name="nav_choice">Desired Roll</string>
    <string name="nav_sum">Desired Sum</string>
    <string name="nav_options">Options</string>
    <string name="general">General</string>
    <string name="choice_mode_options">Desired Roll Mode Options</string>
    <string name="sum_mode_options">Sum Mode Options</string>
    <string name="numDiceHint">1-6 supported</string>
    <string name="minFaceHint">0 or greater</string>
    <string name="maxFaceHint">Greater than minFace</string>
    <string name="minFaceLabel">Minimum Die Face:</string>
    <string name="maxFaceLabel">Maximum Die Face:</string>
    <string name="numDiceDefault">6</string>
    <string name="minFaceDefault">1</string>
    <string name="maxFaceDefault">6</string>
    <string name="saveOptionsButton">Save</string>
    <string name="rollsSumDefault">1</string>
    <string name="sumDesLabel">Sum Desired: Only</string>
    <string name="die1">Die 1</string>
    <string name="die2">Die 2</string>
    <string name="die3">Die 3</string>
    <string name="die4">Die 4</string>
    <string name="die5">Die 5</string>
    <string name="die6">Die 6</string>
    <string name="dieValueLabel">Dice Face Ranges (Min-Max)</string>
    <string name="dieSumSeparator"> - </string>
    <string name="sumAtLeastCheck">At least?</string>
    <string name="quicker">Quicker</string>
    <string name="accurate">More\nAccurate</string>
</resources>
