<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sumFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.taapps.diceprobcalc.SumFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/sumLabel"
        android:textSize="25sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numDiceLabel"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/numDiceSpinnerSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:entries="@array/numDiceArray" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/sumDesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sumDesLabel"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:text="@string/sumDefault" />

        <CheckBox
            android:id="@+id/sumAtLeastCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/sumAtLeastCheck" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:text="@string/dieValueLabel"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/dieRow1Layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/die1Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/die1"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/die1Min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/minFaceDefault"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dieSumSeparator" />

                    <EditText
                        android:id="@+id/die1Max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/maxFaceDefault"
                        android:textAlignment="center" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/die2Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/die2"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/die2Min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/minFaceDefault"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dieSumSeparator" />

                    <EditText
                        android:id="@+id/die2Max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/maxFaceDefault"
                        android:textAlignment="center" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/die3Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/die3"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/die3Min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/minFaceDefault"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dieSumSeparator" />

                    <EditText
                        android:id="@+id/die3Max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/maxFaceDefault"
                        android:textAlignment="center" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/dieRow2Layout"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/die4Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/die4"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/die4Min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/minFaceDefault"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dieSumSeparator" />

                    <EditText
                        android:id="@+id/die4Max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/maxFaceDefault"
                        android:textAlignment="center" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/die5Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/die5"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/die5Min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/minFaceDefault"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dieSumSeparator" />

                    <EditText
                        android:id="@+id/die5Max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/maxFaceDefault"
                        android:textAlignment="center" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/die6Layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/die6"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/die6Min"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/minFaceDefault"
                        android:textAlignment="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dieSumSeparator" />

                    <EditText
                        android:id="@+id/die6Max"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="numberSigned"
                        android:text="@string/maxFaceDefault"
                        android:textAlignment="center" />
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/calculateButtonSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calcButton" />

        <TextView
            android:id="@+id/resultSum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/result"
            android:textSize="20sp" />

    </LinearLayout>


</LinearLayout>
